Fix back-to-top button position to avoid TOC overlap
On wide screens, shift button left of the TOC column.

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -488,6 +488,12 @@ body:has(.blog-container) .wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 99;
+}
+@media (min-width: 1161px) {
+  .back-to-top {
+    right: calc(2vw + 250px + 48px);
+  }
 }
 .back-to-top.visible {
   opacity: 1;
